WebCore/bindings/v8/V8AbstractEventListener.h
@@ -69,6 +69,8 @@ namespace WebCore {
 
         virtual bool disconnected() const { return !m_frame; }
 
+        virtual bool isObjectListener() const { return false; }
+
     protected:
         v8::Persistent<v8::Object> m_listener;
 
