WebCore/bindings/v8/V8ObjectEventListener.h
@@ -47,6 +47,8 @@ namespace WebCore {
             return adoptRef(new V8ObjectEventListener(frame, listener, isInline));
         }
 
+        virtual bool isObjectListener() const { return true; }
+
     private:
         V8ObjectEventListener(Frame*, v8::Local<v8::Object> listener, bool isInline);
         virtual ~V8ObjectEventListener();
