WebCore/bindings/v8/custom/V8CustomBinding.h
@@ -100,8 +100,11 @@ namespace WebCore {
 
         static const int kNPObjectInternalFieldCount = kDefaultWrapperInternalFieldCount + 0;
 
-        static const int kDocumentImplementationIndex = kDefaultWrapperInternalFieldCount + 0;
-        static const int kDocumentMinimumInternalFieldCount = kDefaultWrapperInternalFieldCount + 1;
+        static const int kNodeEventListenerCacheIndex = kDefaultWrapperInternalFieldCount + 0;
+        static const int kNodeMinimumInternalFieldCount = kDefaultWrapperInternalFieldCount + 1;
+
+        static const int kDocumentImplementationIndex = kNodeMinimumInternalFieldCount + 0;
+        static const int kDocumentMinimumInternalFieldCount = kNodeMinimumInternalFieldCount + 1;
 
         static const int kHTMLDocumentMarkerIndex = kDocumentMinimumInternalFieldCount + 0;
         static const int kHTMLDocumentShadowIndex = kDocumentMinimumInternalFieldCount + 1;
@@ -228,7 +231,7 @@ namespace WebCore {
         DECLARE_PROPERTY_ACCESSOR_GETTER(EventClipboardData);
 
         DECLARE_PROPERTY_ACCESSOR(DOMWindowEventHandler);
-        DECLARE_PROPERTY_ACCESSOR(ElementEventHandler);
+        DECLARE_PROPERTY_ACCESSOR(NodeEventHandler);
 
         DECLARE_CALLBACK(HTMLCanvasElementGetContext);
 
